2003-11-27  Caleb Moore <calebmm@tpg.com.au>

	* *: Implement bounding box based gradients
	
2003-11-25  Caleb Moore <calebmm@tpg.com.au>

	* rsvg-styles.c: Fix opacity inheritance. Fixes a few bugs
	
2003-11-25  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/*: Start of work on a RSVG Mozilla/Netscape plugin. 
	Doesn't work quite yet - needs some help along.
	
2003-11-24  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c
	* rsvg-styles.h
	* rsvg-shape.c: Fix Sodipodi flags, implement fill rules. From
	"Caleb Moore" <calebmm@tpg.com.au>
	
2003-10-16  Sven Neumann  <sven@gimp.org>

	* rsvg.c: fixed inline docs.

	* doc/Makefile.am: ignore internal header files.

	* doc/rsvg-sections.txt
	* doc/tmpl/rsvg.sgml: added new functions.

2003-09-23  Sven Neumann  <sven@gimp.org>

	* rsvg.c (rsvg_start_svg): respect viewBox offsets by applying an
	appropriate translation.

2003-09-21  Tor Lillqvist  <tml@iki.fi>

	* librsvg-zip.in: New file.

	* configure.in: Check for Win32, set OS_WIN32 automake
	variable. Check for strtok_r. Expand librsvg-zip.

	* Makefile.am: Use -lm only on Unix. Add LIBGSF_LIBS and
	LIBCROCO_LIBS to librsvg_2_la_LIBADD. Distribute librsvg-zip.in.

	* rsvg-css.c: Use G_PI instead of M_PI.
	(strtok_r): Implement strtok_r here if not available. (Very
	suboptimal implementation.)

2003-09-19  Sven Neumann  <sven@gimp.org>

	* rsvg-file-util.c: implemented missing GError handling for file
	operations.

2003-09-18  Sven Neumann  <sven@gimp.org>

	* Makefile.am
	* configure.in
	* gimp-plugin/Makefile.am
	* gimp-plugin/svg.c: removed GIMP plug-in; it now lives in the
	GIMP source tree. Thanks a lot for the nice work you've done!

2003-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in
	* rsvg-styles.c (rsvg_real_parse_cssbuffer): removed the #warning
	here and instead output it when configure is run (bug #122119).

2003-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on Pango version 1.2.0 or newer.
